pruebas de asignacion, interfaces

--- a/InterfazUsuario/InterfazUsuario.csproj
+++ b/InterfazUsuario/InterfazUsuario.csproj
@@ -46,11 +46,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="GestionAlumnosUI.cs">
+    <Compile Include="GestionAlumnoUI.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="GestionAlumnosUI.Designer.cs">
-      <DependentUpon>GestionAlumnosUI.cs</DependentUpon>
+    <Compile Include="GestionAlumnoUI.Designer.cs">
+      <DependentUpon>GestionAlumnoUI.cs</DependentUpon>
     </Compile>
     <Compile Include="GestionDocenteUI.cs">
       <SubType>Form</SubType>
@@ -72,8 +72,8 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <EmbeddedResource Include="GestionAlumnosUI.resx">
-      <DependentUpon>GestionAlumnosUI.cs</DependentUpon>
+    <EmbeddedResource Include="GestionAlumnoUI.resx">
+      <DependentUpon>GestionAlumnoUI.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="GestionDocenteUI.resx">
       <DependentUpon>GestionDocenteUI.cs</DependentUpon>
@@ -111,6 +111,10 @@
     <None Include="Resources\fondo ventana.png" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\GestionAlumno\GestionAlumno.csproj">
+      <Project>{FE17B301-31C3-47E8-9576-60F23264A7F6}</Project>
+      <Name>GestionAlumno</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Obligatorio1DA\GestionDocente.csproj">
       <Project>{99B99CDE-B8E9-4FE3-8FF5-E3F908092C11}</Project>
       <Name>GestionDocente</Name>
