pruebas asignacion docente e interfaz de usuario

--- a/InterfazUsuario/InterfazUsuario.csproj
+++ b/InterfazUsuario/InterfazUsuario.csproj
@@ -52,6 +52,12 @@
     <Compile Include="GestionAlumnoUI.Designer.cs">
       <DependentUpon>GestionAlumnoUI.cs</DependentUpon>
     </Compile>
+    <Compile Include="GestionCamionetaUI.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="GestionCamionetaUI.Designer.cs">
+      <DependentUpon>GestionCamionetaUI.cs</DependentUpon>
+    </Compile>
     <Compile Include="GestionDocenteUI.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -74,6 +80,9 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="GestionAlumnoUI.resx">
       <DependentUpon>GestionAlumnoUI.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="GestionCamionetaUI.resx">
+      <DependentUpon>GestionCamionetaUI.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="GestionDocenteUI.resx">
       <DependentUpon>GestionDocenteUI.cs</DependentUpon>
@@ -114,6 +123,14 @@
     <ProjectReference Include="..\GestionAlumno\GestionAlumno.csproj">
       <Project>{FE17B301-31C3-47E8-9576-60F23264A7F6}</Project>
       <Name>GestionAlumno</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\GestionCamioneta\GestionCamioneta.csproj">
+      <Project>{23AC0844-1FCE-4251-BCB9-0D2DDE13BDEA}</Project>
+      <Name>GestionCamioneta</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\GestionMateria\GestionMateria.csproj">
+      <Project>{F469051A-8078-4AC2-8F7D-2CDF527CF01C}</Project>
+      <Name>GestionMateria</Name>
     </ProjectReference>
     <ProjectReference Include="..\Obligatorio1DA\GestionDocente.csproj">
       <Project>{99B99CDE-B8E9-4FE3-8FF5-E3F908092C11}</Project>
