--- a/Obligatorio1DA/GestionDocente.csproj
+++ b/Obligatorio1DA/GestionDocente.csproj
@@ -45,6 +45,10 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\GestionMateria\GestionMateria.csproj">
+      <Project>{f469051a-8078-4ac2-8f7d-2cdf527cf01c}</Project>
+      <Name>GestionMateria</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Interfaces\Interfaces.csproj">
       <Project>{1a27e14a-3f49-476a-bad9-e118b4a628d1}</Project>
       <Name>Interfaces</Name>
