--- a/GestionMateria/GestionMateria.csproj
+++ b/GestionMateria/GestionMateria.csproj
@@ -40,6 +40,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AsignacionMateria.cs" />
     <Compile Include="MantenimientoMateria.cs" />
     <Compile Include="Materia.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
